--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,21 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-12">
+     
+     <!-- <app-todo-dashboard></app-todo-dashboard> -->
       <app-student-dashboared></app-student-dashboared>
     </div>
   </div>
 </div>
 
+<hr>
 
 <div class="container mt-5">
   <div class="row">
     <div class="col-12">
-      <div class="container mt-5">
-  <div class="row">
-    <div class="col-12">
-     <div class="container mt-5">
-  <div class="row">
-    <div class="col-12">
-      <!-- <app-todo-dashboard></app-todo-dashboard> -->
-    </div>
-  </div>
-</div>
-
-    </div>
-  </div>
-</div>
-
+     
+     <app-todo-dashboard></app-todo-dashboard>
+      <!-- <app-student-dashboared></app-student-dashboared> -->
     </div>
   </div>
 </div>
