--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,14 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-12">
-     
-     <!-- <app-todo-dashboard></app-todo-dashboard> -->
+      <!-- <app-todo-dashboard></app-todo-dashboard> -->
       <app-student-dashboared></app-student-dashboared>
     </div>
   </div>
 </div>
 
-<hr>
+<hr />
 
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-12">
-     
-     <app-todo-dashboard></app-todo-dashboard>
-      <!-- <app-student-dashboared></app-student-dashboared> -->
-    </div>
-  </div>
+<div class="container">
+  <app-todo-dashboard></app-todo-dashboard>
 </div>
