--- a/src/app/componant/todo-dashboard/todo-dashboard.component.html
+++ b/src/app/componant/todo-dashboard/todo-dashboard.component.html
@@ -1,8 +1,8 @@
+
+<h2>Todo-Crud By using @input @ouput Decorator </h2>
 <div class="row">
   <div class="col-md-6 mb-4 mb-md-0">
-    <app-todo-form
-      [getedittodo]="edittodo"
-      (emittodo)="getnewtodo($event)">
+    <app-todo-form [getedittodo]="edittodo" (emittodo)="getnewtodo($event)">
     </app-todo-form>
   </div>
 
@@ -10,7 +10,9 @@
     <app-todo-list
       [todos]="todoarray"
       (emitedittodo)="getedittodo($event)"
-      (emitremoveid)="getremoveId($event)">
+      (emitremoveid)="getremoveId($event)"
+    >
     </app-todo-list>
   </div>
 </div>
+
